<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Converter</string>
    <string name="action_settings">Settings</string>

    <string name="title_acceleration">Acceleration</string>
    <string name="title_data_transfer_speed">Data Transfer Speed</string>
    <string name="title_fuel_consumption">Fuel Consumption</string>
    <string name="title_length">Length</string>
    <string name="title_speed">Speed</string>
    <string name="title_temperature">Temperature</string>

    <string name="title_activity_settings">Settings</string>

    <!--TODO: Change these to use the sub and sup tags at some point in the future-->
    <string name="acceleration_mpss">Meters per second squared (m/s^2)</string>
    <string name="acceleration_cmpss">Centimeters per second squared (cm/s^2)</string>
    <string name="acceleration_fpss">Feet per second squared (ft/s^2)</string>
    <string name="acceleration_sg">Standard gravity (g_n)</string>

    <string name="data_transfer_speed_bps">Bits per second (bps)</string>
    <string name="data_transfer_speed_byps">Bytes per second (Bps)</string>
    <string name="data_transfer_speed_kbps">Kilobits per second (kbps)</string>
    <string name="data_transfer_speed_kbyps">Kilobytes per second (kBps)</string>
    <string name="data_transfer_speed_mbps">Megabits per second (Mbps)</string>
    <string name="data_transfer_speed_mbyps">Megabytes per second (MBps)</string>
    <string name="data_transfer_speed_gbps">Gigabits per second (Gbps)</string>
    <string name="data_transfer_speed_gbyps">Gigabytes per second (GBps)</string>
    <string name="data_transfer_speed_tbps">Terabits per second (Tbps)</string>
    <string name="data_transfer_speed_tbyps">Terabytes per second (TBps)</string>

    <string name="fuel_consumption_usmpg">US Miles per gallon (mpg)</string>
    <string name="fuel_consumption_ukmpg">UK Miles per gallon (mpg)</string>
    <string name="fuel_consumption_kpl">Kilometers per liter (km/L)</string>
    <string name="fuel_consumption_l100k">Liters per 100 kilometers (L/100km)</string>

    <string name="length_inch">Inch (in)</string>
    <string name="length_foot">Foot (ft)</string>
    <string name="length_yard">Yard (yd)</string>
    <string name="length_mile">Mile (mi)</string>
    <string name="length_millimeter">Millimeter (mm)</string>
    <string name="length_centimeter">Centimeter (cm)</string>
    <string name="length_meter">Meter (m)</string>
    <string name="length_kilometer">Kilometer (km)</string>

    <string name="speed_fps">Feet/Second (fps)</string>
    <string name="speed_knot">Knot</string>
    <string name="speed_kph">Kilometer/Hour (kph)</string>
    <string name="speed_mps">Meter/Second (mps)</string>
    <string name="speed_mph">Mile/Hour (mph)</string>

    <string name="temperature_celsius">Celsius</string>
    <string name="temperature_kelvin">Kelvin</string>
    <string name="temperature_fahrenheit">Fahrenheit</string>

    <string name="activity_main_drawer_icon_description">The icon of the current item</string>

    <string name="activity_settings_logcat">Logcat Messages</string>
    <string name="activity_settings_logcat_summary">Turn on logcat messages</string>
    <string name="activity_settings_decimal">Decimal Places</string>
    <string name="activity_settings_decimal_summary">Number of decimal places you want to see</string>
    <string name="activity_settings_persist">Persist Values</string>
    <string name="activity_settings_persist_summary">Save the values in each of the conversion fields, even if the app is closed</string>

    <!-- Errors -->

    <string name="activity_main_error_default_prefs">Could not get preferences. Using defaults.</string>

    <string name="conversion_error_input_not_numeric">Input is not numeric</string>
    <string name="conversion_error_conversion_error">There was a problem with converting. Please try again.</string>
    <string name="conversion_error_below_zero">Input cannot be below zero</string>
    <string name="conversion_temperature_error_below_absolute_zero">Input cannot be below absolute zero</string>

    <!-- DO NOT TRANSLATE ANYTHING BELOW THIS LINE. ONLY USED INTERNALLY. -->

    <string name="util_key_debug">is_logcat_enabled</string>
    <string name="util_key_decimal">decimal_places</string>
    <string name="util_key_persist_values">persist_values</string>
    <string name="util_key_trans_from_settings">transitioned_from_settings</string>

</resources>
