<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Data Settings"
        android:layout="@layout/util_preference_category_no_divider">

        <com.bubbinator91.converter.util.NumberPickerPreference
            android:title="@string/activity_settings_decimal"
            android:summary="@string/activity_settings_decimal_summary"
            android:key="@string/util_key_decimal"
            android:defaultValue="8"/>

        <SwitchPreference
            android:title="@string/activity_settings_persist"
            android:summary="@string/activity_settings_persist_summary"
            android:key="@string/util_key_persist_values"
            android:defaultValue="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Debug Settings"
        android:layout="@layout/util_preference_category_divider_above">

        <SwitchPreference
            android:title="@string/activity_settings_logcat"
            android:summary="@string/activity_settings_logcat_summary"
            android:key="@string/util_key_debug"
            android:defaultValue="false"/>

    </PreferenceCategory>

</PreferenceScreen>