<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dts"
            android:icon="@drawable/ic_computer_grey600_48dp"
            android:title="@string/title_data_transfer_speed" />
        <item
            android:id="@+id/nav_length"
            android:icon="@drawable/ic_ruler_grey600_48dp"
            android:title="@string/title_length" />
        <item
            android:id="@+id/nav_speed"
            android:icon="@drawable/ic_bike_grey600_48dp"
            android:title="@string/title_speed" />
        <item
            android:id="@+id/nav_temperature"
            android:icon="@drawable/ic_heat_grey600_48dp"
            android:title="@string/title_temperature" />
    </group>
</menu>