<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackgroundColor"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:id="@+id/card_temperature_celsius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card"
            android:padding="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/temperature_celsius"
                android:id="@+id/textView_temperature_celsius"
                android:labelFor="@+id/editText_temperature_celsius"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:digits="0123456789.-"
                android:selectAllOnFocus="true"
                android:ems="10"
                android:id="@+id/editText_temperature_celsius"
                android:layout_below="@+id/textView_temperature_celsius"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/card_temperature_fahrenheit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_temperature_celsius"
            android:layout_marginTop="10dp"
            android:background="@drawable/card"
            android:padding="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/temperature_fahrenheit"
                android:id="@+id/textView_temperature_fahrenheit"
                android:labelFor="@+id/editText_temperature_fahrenheit"
                android:layout_alignParentStart="true"
                android:layout_marginTop="16dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:digits="0123456789.-"
                android:selectAllOnFocus="true"
                android:ems="10"
                android:id="@+id/editText_temperature_fahrenheit"
                android:layout_below="@+id/textView_temperature_fahrenheit"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/card_temperature_kelvin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_temperature_fahrenheit"
            android:layout_marginTop="10dp"
            android:background="@drawable/card"
            android:padding="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/temperature_kelvin"
                android:id="@+id/textView_temperature_kelvin"
                android:labelFor="@+id/editText_temperature_kelvin"
                android:layout_alignParentStart="true"
                android:layout_marginTop="16dp"  />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:digits="0123456789.-"
                android:selectAllOnFocus="true"
                android:ems="10"
                android:id="@+id/editText_temperature_kelvin"
                android:layout_below="@+id/textView_temperature_kelvin"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

    </RelativeLayout>
</ScrollView>