<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:cards="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_fuel_consumption"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?android:attr/actionBarSize"
    android:clipToPadding="false"
    android:overScrollMode="never"
    tools:context=".MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <android.support.v7.widget.CardView
            android:id="@+id/card_fuel_consumption_usmpg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            cards:cardCornerRadius="@dimen/card_corner_radius"
            cards:cardUseCompatPadding="true"
            cards:cardElevation="@dimen/card_elevation">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout_fuel_consumption_usmpg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_content_padding">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/editText_fuel_consumption_usmpg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:digits="0123456789."
                    android:selectAllOnFocus="true"
                    android:ems="10"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:hint="@string/fuel_consumption_usmpg"/>

            </android.support.design.widget.TextInputLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_fuel_consumption_ukmpg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/card_margin_top"
            android:layout_row="1"
            android:layout_column="0"
            cards:cardCornerRadius="@dimen/card_corner_radius"
            cards:cardUseCompatPadding="true"
            cards:cardElevation="@dimen/card_elevation">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout_fuel_consumption_ukmpg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_content_padding">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/editText_fuel_consumption_ukmpg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:digits="0123456789."
                    android:selectAllOnFocus="true"
                    android:ems="10"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:hint="@string/fuel_consumption_ukmpg"/>

            </android.support.design.widget.TextInputLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_fuel_consumption_kpl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/card_margin_top"
            android:layout_row="2"
            android:layout_column="0"
            cards:cardCornerRadius="@dimen/card_corner_radius"
            cards:cardUseCompatPadding="true"
            cards:cardElevation="@dimen/card_elevation">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout_fuel_consumption_kpl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_content_padding">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/editText_fuel_consumption_kpl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:digits="0123456789."
                    android:selectAllOnFocus="true"
                    android:ems="10"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:hint="@string/fuel_consumption_kpl"/>

            </android.support.design.widget.TextInputLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_fuel_consumption_l100k"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/card_margin_top"
            android:layout_row="3"
            android:layout_column="0"
            cards:cardCornerRadius="@dimen/card_corner_radius"
            cards:cardUseCompatPadding="true"
            cards:cardElevation="@dimen/card_elevation">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout_fuel_consumption_l100k"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_content_padding">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/editText_fuel_consumption_l100k"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:digits="0123456789."
                    android:selectAllOnFocus="true"
                    android:ems="10"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:hint="@string/fuel_consumption_l100k"/>

            </android.support.design.widget.TextInputLayout>

        </android.support.v7.widget.CardView>

    </GridLayout>

</ScrollView>